<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inc_dev2</string>
    <string name="action_settings">Settings</string>
 <string name="text_field">Enter your text1 </string>
    <string name="button_name">Show first </string>
     <string name="text_field1">Enter your text2 </string>
    <string name="button_name1">Show second</string>
     <string name="text_field2">Enter your text3 </string>
    <string name="button_name2">Show third</string>

</resources>
