<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

      
    <EditText  
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textfield"
        android:hint="@string/text_field"
        android:textColor="#000"
        android:textStyle="bold|italic"
        />

     <Button android:id="@+id/button1"
         android:layout_toRightOf="@+id/textfield"
          android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name"></Button>

     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
         android:layout_toRightOf="@+id/textfield1"
         android:text="@string/button_name1" >
</Button>

     <Button android:id="@+id/button3"
         android:layout_toRightOf="@+id/textfield2"
          android:layout_below="@+id/button2"
          android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name2"></Button>

     <EditText
         android:id="@+id/textfield2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button3"
         android:layout_alignBottom="@+id/button3"
         android:layout_toLeftOf="@+id/button1"
         android:ems="10"
         android:hint="@string/text_field2"
         android:textColor="#000"
         android:textStyle="bold|italic" >

         <requestFocus />
     </EditText>

     <EditText
         android:id="@+id/textfield1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button2"
         android:layout_alignBottom="@+id/button2"
         android:layout_toLeftOf="@+id/button1"
         android:ems="10"
         android:hint="@string/text_field1"
         android:textColor="#000"
         android:textStyle="bold|italic" />
    
</RelativeLayout>
